langs = [ 'af', 'am', 'an', 'ar', 'as', 'ast', 'az', 'be@latin', 'be', 'bg', 'bn_IN', 'bn', 'br', 'bs', 'ca', 'ca@valencia', 'crh', 'cs', 'cy', 'da', 'de', 'dz', 'el', 'en_CA', 'en_GB', 'en@shaw', 'eo', 'es', 'et', 'eu', 'fa', 'fi', 'fr', 'fur', 'ga', 'gd', 'gl', 'gu', 'he', 'hi', 'hr', 'hu', 'id', 'is', 'it', 'ja', 'ka', 'kk', 'km', 'kn', 'ko', 'ku', 'lt', 'lv', 'mai', 'mg', 'mk', 'ml', 'mn', 'mr', 'ms', 'nb', 'nds', 'ne', 'nl', 'nn', 'oc', 'or', 'pa', 'pl', 'ps', 'pt_BR', 'pt', 'ro', 'ru', 'rw', 'si', 'sk', 'sl', 'sq', 'sr@latin', 'sr', 'sv', 'ta', 'te', 'tg', 'th', 'tr', 'ug', 'uk', 'vi', 'wa', 'xh', 'zh_CN', 'zh_HK', 'zh_TW' ]

i18n = import('i18n')
i18n.gettext('baobab', languages : langs)

